[package]
authors = ["P. Zometa <zometa@anixet.com>"]
edition = "2018"
readme = "README.md"
name = "test_muaompc_qp"
version = "0.1.0"

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0"

# this lets you use `cargo fix`!
[[bin]]
name = "test_muaompc_qp"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
